# NeedlemanWunsch-Sequence-Aligner

./: .gitignore  00_READ_ME_FIRST.txt  ALGORITHM_TUTORIAL.md  BACA_DULU.txt  COMPLETION_SUMMARY.txt  HASIL_ANALISIS_LENGKAP.txt  IMPLEMENTATION_GUIDE.md  LICENSE  NW_Alignment_Analysis.ipynb  NW_Complete_Algorithm_and_Visualization.ipynb  NW_Visualization_Complete.ipynb  PROJECT_COMPLETION_REPORT.txt  QUICK_START.md  README.md  REPO_STRUCTURE.md  RINGKASAN_HASIL_FINAL.txt  RINGKASAN_LENGKAP.md  START_HERE.txt  SUBMISSION_GUIDE.md  create_visualizations.py  pyproject.toml  requirements.txt  run_nw_analysis.py  setup.py  test_fasta.py
docs/: ALGORITHM_EXPLANATION.md  INSTALLATION.md  USAGE.md
notebooks/: tutorial.ipynb
nw_alignment/: __init__.py  alignment.py  parser.py  utils.py  visualization.py
output/: alignment.txt  nw_alignment_result.json  nw_alignment_result.txt
scripts/: batch_analysis.py  main.py  nw_alignment.py  run_nw_algorithm.py
scripts/output/: alignment.json
tests/: __init__.py  test_alignment.py  test_parser.py
